--- a/public/index.html
+++ b/public/index.html
@@ -45,13 +45,18 @@
         color: var(--ink);
         height: 100%;
         overflow: hidden;
+        overflow-x: hidden;
+        touch-action: manipulation;
       }
 
       .page {
         padding: 28px 18px 80px;
         max-width: 520px;
         margin: 0 auto;
-        height: 100%;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        gap: 18px;
         overflow: hidden;
       }
 
@@ -133,12 +138,18 @@
       .sections {
         display: grid;
         gap: 16px;
+        flex: 1;
+        overflow-y: auto;
+        overflow-x: hidden;
+        overscroll-behavior: contain;
+        align-content: start;
+        align-items: start;
       }
 
       .section {
         background: var(--surface);
         border-radius: var(--radius);
-        padding: 16px 16px 6px;
+        padding: 16px 16px 16px;
         border: 1px solid var(--line);
       }
 
@@ -267,12 +278,13 @@
       button,
       a {
         color: var(--ink);
+        touch-action: manipulation;
       }
 
       .list {
         display: grid;
         gap: 10px;
-        padding-bottom: 10px;
+        padding-bottom: 0;
       }
 
       .todo {
@@ -348,7 +360,7 @@
       .empty {
         font-size: 13px;
         color: var(--muted);
-        padding: 8px 2px 12px;
+        padding: 0 2px;
       }
 
       @media (max-width: 480px) {
@@ -429,6 +441,21 @@
 
       const app = initializeApp(firebaseConfig);
       const db = getFirestore(app);
+      let lastTouchEnd = 0;
+      document.addEventListener("gesturestart", (event) => event.preventDefault());
+      document.addEventListener("gesturechange", (event) => event.preventDefault());
+      document.addEventListener("gestureend", (event) => event.preventDefault());
+      document.addEventListener(
+        "touchend",
+        (event) => {
+          const now = Date.now();
+          if (now - lastTouchEnd <= 300) {
+            event.preventDefault();
+          }
+          lastTouchEnd = now;
+        },
+        { passive: false }
+      );
       const PERIODS = [
         { id: "morning", label: "MORNING", range: "06-12", start: 6, end: 12 },
         { id: "lunch", label: "LUNCH", range: "12-18", start: 12, end: 18 },
